--- a/task4-questions.ipynb
+++ b/task4-questions.ipynb
@@ -22,7 +22,7 @@
     "### Question 1 \n",
     "What is the effect of increasing the number of layers in an MLP? Are larger (with a greater number of hidden layers) models preferred to smaller ones? If so, why? Or why not?\n",
     "\n",
-    "   Your answer: **[fill in here]**"
+    "   Your answer: Increasing the number of hidden layers does improve the learning of the neural network but that comes at the cost of more computation and complexity. Also, increasing the layers might overfit and hence give undesired results. Hence, larger models are not preferred to smaller ones"
    ]
   },
   {
@@ -32,7 +32,7 @@
     "### Question 2 \n",
     "What is the significance of activation functions in deep learning models? Name any two activation functions that you would use for a hidden layer and for the output layer. \n",
     "\n",
-    "   Your answer: **[fill in here]**"
+    "Your answer: Activation functions in deep learning models are used to make the decision of whether a neuron is going to be activated or not using the calculation of weights and bias. They also introduce non-linearity in models. Activation function for a hidden layer would be ReLU and for the output layer would be sigmoid function."
    ]
   },
   {
@@ -43,7 +43,7 @@
     "Assume you have a problem to predict the annual rainfall in a certain region with some historic numeric data that was given to you, which of these 2 models (Linear Regression and Logistic Regression) would you use? \n",
     "How would you modify the problem statement to use the other model? Are they both linear? \n",
     "\n",
-    "   Your answer: **[fill in here]**\n"
+    "Your answer: I woud use a linear regression model to fit to the numeric data and make predictions from it. To make it a logistic regression we would have to make it as a binary classifier that checks if the amount if annual rainfall is greater than or less than a certain value. Regression uses a sigmoid activation function so its non-linear.\n"
    ]
   },
   {
@@ -53,8 +53,7 @@
     "### Question 4\n",
     "What is the difference between a loss function and an optimization function? \n",
     "\n",
-    "   Your answer: **[fill in here]**\n",
-    "   \n"
+    "   Your answer: The loss function is always minimized to achieve the optimal solution whereas an optimization function can be either minimized or maximized to get the optimal solution\n"
    ]
   },
   {
@@ -64,8 +63,7 @@
     "### Question 5\n",
     "What will happen if you choose a very small or a very large learning rate? \n",
     "\n",
-    "   Your answer: **[fill in here]**\n",
-    "   "
+    "Your answer: Choosing a very small learning rate would take the algorithm a long time to achieve the required accuracy. And having a very large learning rate could cause the training model to converge before the optimal solution region."
    ]
   },
   {
@@ -75,13 +73,13 @@
     "### Question 6\n",
     "What is the function of perplexity in tSNE?  \n",
     "    \n",
-    "   Your answer: **[fill in here]**"
+    "Your answer: Perplexity in tSNE is a parameter that estimates the number of close neighbors to a point."
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 64-bit",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -95,7 +93,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.8.8"
   },
   "vscode": {
    "interpreter": {
